# Echo-Nexus

./: .gitignore  CMakeLists.txt  Main.cpp  README.md
ai/: CMakeLists.txt  DecisionEngine.cpp  DecisionEngine.h  DroneBehavior.cpp  DroneBehavior.h  EnemyAIController.cpp  EnemyAIController.h
assets/: enemy_stats.json  game_config.json  level_1.json  level_3.json  player_stats.json  readme.txt
config/: CMakeLists.txt  ConfigLoader.cpp  ConfigLoader.h  game_config.json
core/: CMakeLists.txt  EventSystem.cpp  EventSystem.h  GameLoop.cpp  GameLoop.h  GameWorld.cpp  GameWorld.h  ServiceLocator.cpp  ServiceLocator.h  SystemManager.cpp  SystemManager.h
data/: CMakeLists.txt  DataManager.cpp  DataManager.h  DialogueDatabase.cpp  DialogueDatabase.h  ResourceLoader.cpp  ResourceLoader.h  enemy_stats.json  level_1.json  level_2.json  level_3.json  memory_fragments.json
entities/: CMakeLists.txt  CloneBody.cpp  CloneBody.h  Drone.cpp  Drone.h  Entity.cpp  Entity.h  Faction.cpp  Faction.h  Player.cpp  Player.h  Trait.cpp  Trait.h
narrative/: CMakeLists.txt  DialogueManager.cpp  DialogueManager.h  MemoryFragment.cpp  MemoryFragment.h  NarrativeManager.cpp  NarrativeManager.h  Quest.cpp  Quest.h  StoryGraph.cpp  StoryGraph.h
procedural/: CMakeLists.txt  EventGenerator.cpp  EventGenerator.h  LevelGenerator.cpp  LevelGenerator.h  StoryEventRunner.cpp  StoryEventRunner.h
render/: AsciiMapRenderer.cpp  AsciiMapRenderer.h  CMakeLists.txt  HUDRenderer.cpp  HUDRenderer.h  RenderEngine.cpp  RenderEngine.h
save/: CMakeLists.txt  SaveManager.cpp  SaveManager.h
tests/: CMakeLists.txt  SaveManagerTest.cpp  ServiceLocatorTest.cpp
ui/: CMakeLists.txt  CombatLogScreen.cpp  CombatLogScreen.h  StatusScreen.cpp  StatusScreen.h  UIManager.cpp  UIManager.h  UIScreen.cpp  UIScreen.h
